2020-02-03  Allen D. Ball  <ball@hcf.dev>

	* License under Apache License, Version 2.0.

2020-02-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 3.0-SNAPSHOT.

2020-01-30  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.0.0.

2020-01-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 1.0.3.
	Use ball:parent:20200102.0.

2019-12-06  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 1.0.2.
	Use ball:parent:20191206.0.

2019-08-20  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 1.0.1.

	* src/main/java/ball/maven/plugins/artifact/AbstractArtifactMojo.java,
	src/main/java/ball/maven/plugins/artifact/ArtifactDownloadMojo.java:
	Stop using deprecated APIs.

2018-04-05  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/maven/plugins/artifact/ArtifactDownloadMojo.java:
	Support <attach/> and <file/> parameters.

	* src/main/java/ball/maven/plugins/artifact/AbstractArtifactMojo.java:
	Implement AttachedArtifact and use AttachedArtifact as parameter
	for convenience methods.

	* src/main/java/ball/maven/plugins/artifact/AttachedArtifact.java:
	Changed to an interface.

2018-04-02  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/maven/plugins/artifact/ArtifactDownloadMojo.java:
	Initial writing.

2018-04-01  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/maven/plugins/artifact/ArtifactAttachMojo.java:
	Support <type/>, <classifier/>, and <file/> parameters.

	* src/main/java/ball/maven/plugins/artifact/ArtifactMainMojo.java:
	Changed name of goal from "set" to "main".

2018-03-31  Allen D. Ball  <ball@sol.local>

	* Initial writing.
