@@ -1,10 +1,25 @@
-/*
- * $Id$
- *
- * Copyright 2018 - 2020 Allen D. Ball.  All rights reserved.
- */
 package ball.maven.plugins.artifact;
-
+/*-
+ * ##########################################################################
+ * Artifact Attach Maven Plugin
+ * $Id$
+ * $HeadURL$
+ * %%
+ * Copyright (C) 2018 - 2020 Allen D. Ball
+ * %%
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * ##########################################################################
+ */
 import java.io.File;
 import java.util.List;
 import java.util.regex.Pattern;
