@@ -1,8 +1,3 @@
-/*
- * $Id$
- *
- * Copyright 2019, 2020 Allen D. Ball.  All rights reserved.
- */
 /**
  * artifact-maven-plugin {@link org.apache.maven.plugin.Mojo}s.
  *
@@ -10,3 +5,24 @@
  * @version $Revision$
  */
 package ball.maven.plugins.artifact;
+/*-
+ * ##########################################################################
+ * Artifact Attach Maven Plugin
+ * $Id$
+ * $HeadURL$
+ * %%
+ * Copyright (C) 2018 - 2020 Allen D. Ball
+ * %%
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * ##########################################################################
+ */
